Avt, Cryptoxone, P4P, updated

--- a/OctagonPlatform/Views/Octagon/AVT.cshtml
+++ b/OctagonPlatform/Views/Octagon/AVT.cshtml
@@ -25,7 +25,7 @@
     <div class="col-lg-6">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Sells Per Location
+                <i class="fa fa-bar-chart-o fa-fw"></i> Sales Per Location
                 <div class="pull-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
@@ -58,7 +58,7 @@
         <!-- /.panel -->
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Sells
+                <i class="fa fa-bar-chart-o fa-fw"></i> Sales
                 <div class="pull-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
@@ -308,13 +308,13 @@
         new Morris.Bar({
             element: 'bar-example',
             data: [
-                { y: 'Bogota', a: 2000 },
-                { y: 'Dallas', a: 3500 },
-                { y: 'Miami', a: 1750 },
-                { y: 'London', a: 1250 },
-                { y: 'Tampa', a: 750 },
-                { y: 'Ontario', a: 1600 },
-                { y: 'Seatle', a: 900 }
+                { y: 'Dolphin Mall', a: 2000 },
+                { y: 'Sawgrass Mills', a: 3500 },
+                { y: 'Merryck Park', a: 1750 },
+                { y: 'Lincoln Rd', a: 1250 },
+                { y: 'Aventura Mall', a: 750 },
+                { y: 'City Place', a: 1600 },
+                { y: 'Epcot Center', a: 2500 }
             ],
             xLabelAngle: 35,
             xkey: 'y',
@@ -328,13 +328,13 @@
        new Morris.Area({
             element: 'area-example',
             data: [
-                { y: '2006', a: 1250 },
-                { y: '2007', a: 1500 },
-                { y: '2008', a: 1000 },
-                { y: '2009', a: 1900 },
-                { y: '2010', a: 2000 },
-                { y: '2011', a: 1950 },
-                { y: '2012', a: 2200 }
+                { y: '2012', a: 1250 },
+                { y: '2013', a: 1500 },
+                { y: '2014', a: 1000 },
+                { y: '2015', a: 1900 },
+                { y: '2016', a: 2000 },
+                { y: '2017', a: 1950 },
+                { y: '2018', a: 2200 }
             ],
             lineColors: ['Green'],
             xkey: 'y',
@@ -349,13 +349,13 @@
         new Morris.Line({
             element: 'line-example',
             data: [
-                { y: '2008', a: 25 },
-                { y: '2009', a: 75 },
-                { y: '2010', a: 65 },
-                { y: '2011', a: 75 },
-                { y: '2012', a: 50 },
+                { y: '2012', a: 25 },
                 { y: '2013', a: 75 },
-                { y: '2014', a: 100 }
+                { y: '2014', a: 65 },
+                { y: '2015', a: 75 },
+                { y: '2016', a: 50 },
+                { y: '2017', a: 75 },
+                { y: '2018', a: 100 }
             ],
             xkey: 'y',
             ykeys: ['a'],
@@ -368,13 +368,13 @@
         new Morris.Area({
             element: 'area-example2',
             data: [
-                { y: '2006', a: 15 },
-                { y: '2007', a: 30 },
-                { y: '2008', a: 25 },
-                { y: '2009', a: 32 },
-                { y: '2010', a: 28 },
-                { y: '2011', a: 49 },
-                { y: '2012', a: 43 }
+                { y: '2012', a: 15 },
+                { y: '2013', a: 30 },
+                { y: '2014', a: 25 },
+                { y: '2015', a: 32 },
+                { y: '2016', a: 28 },
+                { y: '2017', a: 49 },
+                { y: '2018', a: 43 }
             ],
             lineColors: ['Grey'],
             xkey: 'y',
@@ -403,8 +403,8 @@
         new Morris.Donut({
             element: 'donut-example2',
             data: [
-                { label: "Credit", value: 30 },
-                {label: "Cash", value: 10}
+                { label: "Credit", value: 1057 },
+                {label: "Cash", value: 650}
             ],
             colors: ['#ff0000','#ff7f7f'],
             resize: true
