--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
@@ -13,60 +13,15 @@
     <div class="panel-body">
 
         @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="row">
-                <div class="form-horizontal">
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal", @placeholder = "< All >" } })
-                                @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner", @placeholder = "< All >" } })
-                                @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
-                                @Html.ValidationMessageFor(model => model.Partner, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
-                                @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
-                                @Html.ValidationMessageFor(model => model.Group, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EnumDropDownListFor(b => b.Status, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10" style="text-align: right;">
-                                <input type="submit" value="Filter" class="btn btn-primary" />
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
+    {
+        @Html.AntiForgeryToken()
+        @Html.Partial("CashManagement/_PartialForm", Model)
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10" style="text-align: right;">
+                <input type="submit" value="Filter" class="btn btn-primary" />
             </div>
-        }
+        </div>
+}
 
     </div>
 </div>
