--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -69,6 +69,11 @@
                                 <i class="fa fa-flag fa-fw"></i> Report Schedules
                             </a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Subscription")">
+                                <i class="fa fa-flag fa-fw"></i> Report Schedules
+                            </a>
+                        </li>
                     </ul>
                     <!-- /.nav-second-level -->
                 </li>
