cambio de nombre a los viewmodel de los reportes, para que se llamen igual que el funcion mas ViewModel

--- a/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/CashBalanceatClose.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/CashBalanceatClose.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.CashBalanceAtCloseVM
+﻿@model OctagonPlatform.Models.FormsViewModels.CashBalanceatCloseViewModel
 @{
     ViewBag.Title = "Cash Balance At Close";
 
