--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/CashManagement.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.CashManagementVM
+﻿@model OctagonPlatform.Models.FormsViewModels.CashManagementViewModel
 @{
     ViewBag.Title = "Cash Management";
 
