--- a/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary/DailyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/DailyTransactionSummary/DailyTransactionSummary.cshtml
@@ -1,5 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.TransDailyViewModel
-@{
+﻿@model OctagonPlatform.Models.FormsViewModels.DailyTransactionSummaryViewModel
     ViewBag.Title = "Daily Transaction Summary";
 
 
