--- a/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/MonthlyTransactionSummary/MonthlyTransactionSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model OctagonPlatform.Models.FormsViewModels.TransMonthlyViewModel
+@model OctagonPlatform.Models.FormsViewModels.MonthlyTransactionSummaryViewModel
 @{
     ViewBag.Title = "Monthly Transaction Summary";
 
