--- a/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalStatus/TerminalStatus.cshtml
@@ -1,5 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.TerminalStatusFormFilterVM
-@{
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalStatusViewModel
     ViewBag.Title = "TerminalStatus";
 }
 <h2>TerminalStatus</h2>
