--- a/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashBalanceatClose/_PartialForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.CashBalanceAtCloseVM
+﻿@model OctagonPlatform.Models.FormsViewModels.CashBalanceatCloseViewModel
 <div class="row">
     <div class="form-horizontal">
         <div class="col-xs-12 col-sm-4 col-md-4">
