--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.FormsViewModels.CashManagementVM
+﻿@model OctagonPlatform.Models.FormsViewModels.CashManagementViewModel
 <div class="row">
     <div class="form-horizontal">
         <div class="col-xs-12 col-sm-4 col-md-4">
