--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -27,7 +27,20 @@
 
 @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 
+<script>
+      var urlautopartner = '@Url.Action("AutoPartner", "ReportsSmart")';
+        var urlstate = '@Url.Action("AutoState", "ReportGroup")';
+        var urlcity = '@Url.Action("AutoCity", "ReportGroup")';
+        var urlzipcode = '@Url.Action("AutoZipCode", "ReportGroup")';
+        var urlautoterminal = '@Url.Action("AutoTerminal", "ReportsSmart")';
+        var urlautogroup = '@Url.Action("AutoGroup", "ReportsSmart")';
+        var urlautoaccount = '@Url.Action("AutoAccount", "BankAccount")';
+         var urlautoschedule = '@Url.Action("AutoScheduled", "Schedule")';
+         var urluser = '@Url.Action("AutoUser", "Users")';
 
+
+     
+</script>
 
 
 
