--- a/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashManagement/_PartialForm.cshtml
@@ -5,7 +5,7 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2 terminalId" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal", @placeholder = "< All >" } })
                     @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
@@ -13,7 +13,7 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2 partner" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner", @placeholder = "< All >" } })
                     @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
@@ -23,7 +23,7 @@
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="form-group">
-                @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2 group" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
                     @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2 status" })
                 <div class="col-md-10">
                     @Html.EnumDropDownListFor(b => b.Status, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
