--- a/OctagonPlatform/Views/ReportsSmart/TerminalList/_PartialForm.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/TerminalList/_PartialForm.cshtml
@@ -5,14 +5,14 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2 terminalId" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal", @placeholder = "< All >" } })
                     @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Group, htmlAttributes: new { @class = "control-label col-md-2 group" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Group, new { htmlAttributes = new { @class = "form-control", @id = "group", @placeholder = "< All >" } })
                     @Html.HiddenFor(model => model.GroupId, new { id = "groupid" })
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2 partner" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner", @placeholder = "< All >" } })
                     @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
@@ -29,7 +29,7 @@
             </div>
 
             <div class="form-group">
-                @Html.Label("Account: ", new { @class = "col-sm-2 control-label" })
+                @Html.Label("Account: ", new { @class = "col-sm-2 control-label account" })
                 <div class="col-sm-10">
                     @Html.EditorFor(model => model.Account, new { htmlAttributes = new { @class = "form-control", @id = "account", @placeholder = "<All>" } })
                     @Html.HiddenFor(model => model.AccountId, new { @id = "accountid" })
@@ -39,50 +39,73 @@
         <div class="col-xs-12 col-sm-4 col-md-4">
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2 status" })
                 <div class="col-md-10">
                     @Html.EnumDropDownListFor(b => b.Status, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.Label("City: ", new { @class = "col-sm-2 control-label" })
+                @Html.Label("City: ", new { @class = "col-sm-2 control-label city" })
                 <div class="col-sm-10">
                     @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @id = "city", @placeholder = "<All>" } })
                     @Html.HiddenFor(model => model.CityId, new { @id = "cityid" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.Label("State: ", new { @class = "col-sm-2 control-label" })
+                @Html.Label("State: ", new { @class = "col-sm-2 control-label state" })
                 <div class="col-sm-10">
                     @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control", @id = "state", @placeholder = "<All>" } })
                     @Html.HiddenFor(model => model.StateId, new { @id = "stateid" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.Label("Zip Code: ", new { @class = "col-sm-2 control-label" })
+                @Html.Label("Zip Code: ", new { @class = "col-sm-2 control-label zipcode" })
                 <div class="col-sm-10">
                     @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control", @id = "zipcode", @placeholder = "<All>" } })
                 </div>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
-            <div class="form-group">
-                @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", @id = "StartDate", @readonly = "" } })
-                    @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
-                </div>
+            @if ((bool)TempData["sub"] == false)
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2 from" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", @id = "StartDate", @readonly = "" } })
+                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control", @id = "EndDate", @readonly = "" } })
-                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
-                </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2 to" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control", @id = "EndDate", @readonly = "" } })
+                @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
             </div>
+        </div>
+}
+else
+{
+        <div class="form-group">
+            @Html.Label("Created On/After", htmlAttributes: new { @class = "control-label col-md-2 createdafter" })
+            <div class="col-md-10">
+                <label>@Html.DropDownList("CreatedOnAfter", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control" })Day(s) Previous</label>
+
+                @Html.ValidationMessage("CreatedOnAfter", "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.Label("Created Before", htmlAttributes: new { @class = "control-label col-md-2 createdbefore" })
+            <div class="col-md-10">
+                <label>@Html.DropDownList("CreatedBefore", (IEnumerable<SelectListItem>)TempData["StartDate"], htmlAttributes: new { @class = "form-control" })Day(s) Previous</label>
+
+                @Html.ValidationMessage("CreatedBefore", "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+}
             <div class="form-group">
-                @Html.LabelFor(model => model.ConectionType, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ConectionType, htmlAttributes: new { @class = "control-label col-md-2 conectionType" })
                 <div class="col-md-10">
                     @Html.EnumDropDownListFor(b => b.ConectionType, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.ConectionType, "", new { @class = "text-danger" })
