--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -26,7 +26,7 @@
 
 
 @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
-
+@Scripts.Render("~/Scripts/jquery.serializeObject.min.js")
 <script>
       var urlautopartner = '@Url.Action("AutoPartner", "ReportsSmart")';
         var urlstate = '@Url.Action("AutoState", "ReportGroup")';
@@ -39,7 +39,7 @@
          var urluser = '@Url.Action("AutoUser", "Users")';
 
 
-     
+
 </script>
 
 
