--- a/OctagonPlatform/Views/Subscription/Index.cshtml
+++ b/OctagonPlatform/Views/Subscription/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.EmailComment)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ScheduledId)
+          
         </th>
         <th></th>
     </tr>
@@ -53,7 +53,7 @@
                 @Html.DisplayFor(modelItem => item.EmailComment)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ScheduledId)
+                ghfh
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
