--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -72,7 +72,7 @@
             @Html.ValidationMessageFor(m => m.IsLocked)
         </div>
 
-        @Html.Partial("Sections/PermissionTree")
+        @Html.Partial("../Permissions/Sections/PermissionTree")
 
         <div class="form-group">
             <div class="col-lg-10 col-lg-offset-2">
