--- a/OctagonPlatform/Views/Subscription/Index.cshtml
+++ b/OctagonPlatform/Views/Subscription/Index.cshtml
@@ -4,26 +4,30 @@
     ViewBag.Title = "Index";
 }
 
+
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<div class="form-group">
-    @Html.LabelFor(model => model.User, htmlAttributes: new { @class = "control-label col-md-2" })
-    <div class="col-md-10">
-        @Html.EditorFor(model => model.User, new { htmlAttributes = new { @class = "form-control", @id = "user" } })
-        @Html.HiddenFor(model => model.UserId, new { id = "userid" })
-        @Html.ValidationMessageFor(model => model.User, "", new { @class = "text-danger" })
-    </div>
-</div>
+
 <figure class="highlight">
+    @Html.Partial("../Error/_PartialAlert")
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <div class="form-group">
+        @Html.LabelFor(model => model.User, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.User, new { htmlAttributes = new { @class = "form-control", @id = "user" } })
+            @Html.HiddenFor(model => model.UserId, new { id = "userid" })
+            @Html.ValidationMessageFor(model => model.User, "", new { @class = "text-danger" })
+        </div>
+    </div>
     <div id="SubscriptionList">@Html.Partial("Table", Model) </div>
 
 </figure>
 <figure class="highlight">
 
     <div id="message"></div>
+
     @using (Html.BeginForm("Create", "Subscription", FormMethod.Post, new { @id = "FormSub" }))
     {
         @Html.AntiForgeryToken()
@@ -58,10 +62,13 @@
 
 
 @section Scripts {
-
     @Scripts.Render("~/Scripts/autocomplete.js")
-    <script>
 
+    @Scripts.Render("~/Scripts/jquery.validate.min.js")
+    @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.min.js")
+
+<script>
+     var url = '@Url.Action("AutoUser", "Users")';
 
     $(function () {
 
@@ -77,7 +84,31 @@
                 });
             });
 
+        $('#user').autocomplete({
+            source: url,
+            select: function (event, ui) {
 
+                $("#user").val(ui.item.label); // display the selected text
+                $("#userid").val(ui.item.value); // save selected id to hidden input
+                $.get('@Url.Action("List", "Subscription")', { userId: $("#userid").val() }, function (data) {
+
+                    $("#SubscriptionList").html(data);
+                });
+                return false;
+            }
+        });
+        $('#user').blur(function () {
+            if ($('#user').val() == "") {
+                $('#user').attr("placeholder", "< ALL >");
+                $('#userid').val('');
+
+               $.get('@Url.Action("List", "Subscription")', { userId: 0 }, function (data) {
+                  // alert(data);
+                    $("#SubscriptionList").html(data);
+                });
+            }
+
+        });
             $('#FormSub').submit(function () {
                // var formData = $('#FormSub').serializeObject();
                 $("#userId").val($("#userid").val());
@@ -86,13 +117,22 @@
                     url: this.action,
                     type: this.method,
                     data: $(this).serialize(),
-                    success: function (result) {
-                        $("#message").html(result);
-                        if ($(".alert-success").html() != "") {
-                            setTimeout(function () {
-                                window.location.href = "@Url.Action("Index", "Subscription")";
-                            }, 2000);
+                    success: function (data) {
+                        alert(data);
+                        var isSuccessful = (data['success']);
+                      
+                        if (isSuccessful) {
+                              var url2 = '@Url.Action("Index", "Subscription", new RouteValueDictionary(new { a = 1 }), "http", string.Empty)';
+                       
+                            window.location.href = url2 + "&b=" + $("#userid").val();
                         }
+                        else {
+                            alert("ff");
+                            var errors = data['errors'];
+                            $("#message").html(' <div class="alert alert-danger"><strong>'+errors+'</strong> </div>');
+                        }
+
+
 
                     },
                     error: function (xhr, status, error) {
@@ -110,9 +150,8 @@
     });
 
 
-    </script>
+</script>
 
 
 }
-@Scripts.Render("~/Scripts/jquery.validate.min.js")
-@Scripts.Render("~/Scripts/jquery.validate.unobtrusive.min.js")
+
