--- a/OctagonPlatform/Views/Error/_PartialAlert.cshtml
+++ b/OctagonPlatform/Views/Error/_PartialAlert.cshtml
@@ -1,4 +1,5 @@
-﻿@if (TempData["Success"] != null)
+﻿<div id="error">
+@if (TempData["Success"] != null)
 {
     <div class="alert alert-success">
         <strong>@TempData["Success"]</strong>
@@ -10,3 +11,4 @@
         <strong>@TempData["Danger"]</strong>
     </div>
 }
+</div>
