--- a/OctagonPlatform/Views/Subscription/Index.cshtml
+++ b/OctagonPlatform/Views/Subscription/Index.cshtml
@@ -21,43 +21,14 @@
             @Html.ValidationMessageFor(model => model.User, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div id="SubscriptionList">@Html.Partial("Table", Model) </div>
-
+   
+    <p>&nbsp;</p>
 </figure>
 <figure class="highlight">
 
     <div id="message"></div>
-
-    @using (Html.BeginForm("Create", "Subscription", FormMethod.Post, new { @id = "FormSub" }))
-    {
-        @Html.AntiForgeryToken()
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Report Selection</h3>  <hr />
-                <div class="form-group">
-                    @Html.LabelFor(model => model.ReportId, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("ReportId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.ReportId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div id="PartialFilter"> </div>
-            </div>
-            <div class="col-md-6">
-                <h3>Scheduling</h3>   <hr />
-
-
-                @Html.Partial("Create", Model)
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10" style="text-align: right;">
-                        <input type="submit" value="Save" class="btn btn-primary" />
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <input type="hidden" id="userId" name="userId" />
-    }
+    <div id="SubscriptionList">@Html.Partial("Table", Model) </div>
+   
 </figure>
 
 
